--- a/wemeet/templates/account/login.html
+++ b/wemeet/templates/account/login.html
@@ -18,7 +18,10 @@
                 <div class="login-table rlp-table">
                     <img src="{% static 'assets/images/logo.png' %}" alt="Logo" style="width: 120px; height: 120px; margin-bottom: -20px;" class="login"/>
                     <div class="login-title rlp-title">login</div>
-                    <form method="POST" novalidate>
+                    {% if message %}
+                        <h4 class="text-danger"> {{ message }} </h4>
+                    {% endif %}
+                    <form method="POST">
                         {% csrf_token %}
                         <div class="login-form bg-w-form rlp-form">
                             <table>
@@ -32,8 +35,8 @@
                                     {% endfor %}
                                 </div>
                             </table>
-                            <a href="../forgot-password/">Forgot Password?</a><br><br>
-                            <a href="../register/">Don't have an account?</a>
+                            <a href="{% url 'forgotPassword' %}">Forgot Password?</a><br><br>
+                            <a href="{% url 'register' %}">Don't have an account?</a>
                         </div>
                         <div class="login-submit">
                             <button type="submit" class="btn btn-login btn-green"><span>sign in</span></button>
