--- a/wemeet/templates/__navbar.html
+++ b/wemeet/templates/__navbar.html
@@ -27,12 +27,48 @@
                     </li>
                     <li class="dropdown"><a href="javascript:void(0)" class="main-menu">Board<span class="fa fa-angle-down icons-dropdown"></span></a>
                         <ul class="dropdown-menu edugate-dropdown-menu-1">
-                            <li><a href="{% url 'create_board' %}" class="link-page">Create</a></li>
-
+                            <li>
+                                <a href="{% url 'create_board' %}" class="link-page" data-toggle="modal" data-target="#myModal">Create</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
             </nav>
         </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h3 class="modal-title">Create Board</h3>
+        </div>
+        <div class="modal-body row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <form method="post">
+                    <label for="id_title" class="control-label form-label">Board Title: <span class="highlight">*</span></label>
+                    <input type="text" name="title" id="id_title" placeholder="Eg. Core JAVA or Group Project" class="form-control form-input" required>
+                    <br>
+                    <label for="id_description" class="control-label form-label">Board Description: </label>
+                    <textarea name="description" id="id_description" cols="30" rows="5" class="form-control form-input"></textarea>
+                    <br>
+                    <label for="id_board_type" class="control-label form-label">Board Type: <span class="highlight">*</span></label>
+                    <select name="board_type" id="id_board_type" class="form-control form-input" required>
+                        <option value="-1" disabled selected>Select Board Type</option>
+                        <option value="1">Education</option>
+                        <option value="2">Organization</option>
+                    </select>
+                    <br>
+                    <button type="button" class="btn btn-login btn-green" data-dismiss="modal"><span>Create</span></button>
+                    <br>
+                </form>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+      </div>
     </div>
 </div>
